fixed menu bug on IE11

--- a/src/assets/ui/styles/partials/_menu.scss
+++ b/src/assets/ui/styles/partials/_menu.scss
@@ -14,8 +14,15 @@
 	-webkit-overflow-scrolling: touch;
 	border-right: 1px solid color(light);
 
+	@media (min-width: 60em) {
+		transform: translate(0, 0);
+	}
+
 	.ui-menu-active & {
 		transform: translate(0, 0);
+		@media (min-width: 60em) {
+			transform: translate(-$menu-width, 0);
+		}
 	}
 
 	ul {
